src/objects/Validation_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Rule will be considered, if this checkbox is checked, otherwise it will be ignored</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Fields__c</fullName>
        <description>Not in use currently</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Dependent Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_As_Required_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displays field as mandatory field with red mark</description>
        <label>Display As Required Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_Location__c</fullName>
        <description>domId of the field, where error message need to be displayed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>Error message, which need to be displayed on page, when validation fails</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Not_Contains_Value__c</fullName>
        <description>Value format, domIDs seperated by comma

Comma(,) behaviour== AND

The inputs which mentioned in &quot;field contains value&quot; has value, and the mentioned which are mentioned under &quot;Field not contains value&quot; doesn&apos;t have value, then error message will be displayed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Accepts Comma only
Comma operates as AND</inlineHelpText>
        <label>Field Not Contains Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fields_Contains_Value__c</fullName>
        <description>Value format, domIDs seperated by comma

Comma(,) behaviour== AND

The inputs which mentioned in &quot;field contains value&quot; has value, and the mentioned which are mentioned under &quot;Field not contains value&quot; doesn&apos;t have value, then error message will be displayed</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Accepts Comma only
Comma operates as AND</inlineHelpText>
        <label>Fields Contains Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Length__c</fullName>
        <description>Maximum number digits/characters the Parent field dom id must contain</description>
        <label>Max Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Char_for_wild_card__c</fullName>
        <description>Minimum number of characters (apart from wildcard chars) need to enter when restriction type is wildcard</description>
        <inlineHelpText>Minimum number of characters (apart from wildcard chars) need to enter when restriction type is wildcard</inlineHelpText>
        <label>Min # Char for wild card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Length__c</fullName>
        <description>Minimum number digits/characters the Parent field dom id must contain</description>
        <label>Min Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Dependency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Not in use currently</description>
        <label>No Dependency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regex_To_Follow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Regex To Follow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Fields__c</fullName>
        <description>Required input dom ids, separated by semi colon (OR) comma.

Semi colon (;)  = AND
Comma (,) = OR

EX: taxId,phoneNumer;lastName == (taxId AND phoneNumber) (OR) lastName</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Accepts Comma and Semicolon
Comma operates as AND
Semicolon operates as OR</inlineHelpText>
        <label>Required Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Restriction__c</fullName>
        <label>Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No restriction</fullName>
                </value>
                <value>
                    <fullName>Numbers Only</fullName>
                </value>
                <value>
                    <fullName>Alphabets Only</fullName>
                </value>
                <value>
                    <fullName>Alphanumeric</fullName>
                </value>
                <value>
                    <fullName>Alphanumeric and Wildcard characters</fullName>
                </value>
                <value>
                    <fullName>Alphabets and Wildcard characters only</fullName>
                </value>
                <value>
                    <fullName>Date Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <description>External ID field, to maintain consistency on records across all environments</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Rule #</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Any free form text, to segregate set of rules</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationRuleExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ValidationRuleExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Validation Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Rule__c</columns>
        <columns>Type__c</columns>
        <columns>Active__c</columns>
        <columns>Parent_Field__c</columns>
        <columns>Required_Fields__c</columns>
        <columns>Min_Length__c</columns>
        <columns>Max_Length__c</columns>
        <columns>Fields_Contains_Value__c</columns>
        <columns>Field_Not_Contains_Value__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Location__c</columns>
        <columns>Min_Char_for_wild_card__c</columns>
        <columns>Display_As_Required_Field__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Provider_Lookup_Topic</fullName>
        <columns>NAME</columns>
        <columns>Required_Fields__c</columns>
        <columns>Parent_Field__c</columns>
        <columns>Fields_Contains_Value__c</columns>
        <columns>Field_Not_Contains_Value__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Active__c</columns>
        <columns>Rule__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Provider Lookup</value>
        </filters>
        <label>Provider Lookup</label>
    </listViews>
    <listViews>
        <fullName>View_Authorizations</fullName>
        <columns>NAME</columns>
        <columns>Dependent_Fields__c</columns>
        <columns>Display_As_Required_Field__c</columns>
        <columns>Active__c</columns>
        <columns>Error_Location__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Field_Not_Contains_Value__c</columns>
        <columns>Fields_Contains_Value__c</columns>
        <columns>Max_Length__c</columns>
        <columns>Min_Char_for_wild_card__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>View Authorizations</value>
        </filters>
        <label>View Authorizations</label>
    </listViews>
    <listViews>
        <fullName>View_Claims</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Parent_Field__c</columns>
        <columns>Dependent_Fields__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Field_Not_Contains_Value__c</columns>
        <columns>Fields_Contains_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>View Claims</value>
        </filters>
        <label>View Claims</label>
    </listViews>
    <listViews>
        <fullName>View_Payment</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Dependent_Fields__c</columns>
        <columns>Parent_Field__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>View Payment</value>
        </filters>
        <label>View Payment</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000000}</displayFormat>
        <label>Validation Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>